[gd_scene load_steps=20 format=3 uid="uid://rjgvt64lr83n"]

[ext_resource type="Script" uid="uid://d3788qglhp3jk" path="res://scenes/starting_scene.gd" id="1_jjbkj"]
[ext_resource type="Texture2D" uid="uid://cmwbtjko1gkck" path="res://assets/png_files/sun_background01.png" id="2_dxoqs"]
[ext_resource type="Texture2D" uid="uid://bephgi742uv50" path="res://assets/png_files/surface_ship_only01.png" id="3_ileah"]
[ext_resource type="Texture2D" uid="uid://dvh2njl3u72sy" path="res://assets/png_files/orb_ship_hull00.png" id="4_gnn8k"]
[ext_resource type="StyleBox" uid="uid://dorrudh666oa4" path="res://style_resources/green_game_button.tres" id="5_ileah"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8rk36"]
atlas = ExtResource("3_ileah")
region = Rect2(0, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_oemso"]
atlas = ExtResource("3_ileah")
region = Rect2(325, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq0bj"]
atlas = ExtResource("3_ileah")
region = Rect2(650, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1fr0"]
atlas = ExtResource("3_ileah")
region = Rect2(975, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3y55"]
atlas = ExtResource("3_ileah")
region = Rect2(1300, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_12scp"]
atlas = ExtResource("3_ileah")
region = Rect2(1625, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac4wd"]
atlas = ExtResource("3_ileah")
region = Rect2(1950, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_lajwj"]
atlas = ExtResource("3_ileah")
region = Rect2(2275, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_txwfh"]
atlas = ExtResource("3_ileah")
region = Rect2(2600, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw1fe"]
atlas = ExtResource("3_ileah")
region = Rect2(2925, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwuru"]
atlas = ExtResource("3_ileah")
region = Rect2(3250, 0, 320, 248)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq7x8"]
atlas = ExtResource("3_ileah")
region = Rect2(3575, 0, 320, 248)

[sub_resource type="SpriteFrames" id="SpriteFrames_xwuru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rk36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oemso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq0bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1fr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3y55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12scp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac4wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lajwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txwfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw1fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwuru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq7x8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ileah"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="StartingScene" type="CanvasLayer"]
script = ExtResource("1_jjbkj")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dxoqs")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(495, 345)
texture = ExtResource("4_gnn8k")
centered = false

[node name="ShipAnimatedSprite2D" type="AnimatedSprite2D" parent="TextureRect"]
unique_name_in_owner = true
position = Vector2(495, 345)
scale = Vector2(2.5, 2.34375)
sprite_frames = SubResource("SpriteFrames_xwuru")
autoplay = "default"
frame_progress = 0.390513
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
theme_override_constants/separation = 36

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 48
text = "The Depths of 
Gitche Gumee"
fit_content = true
scroll_active = false

[node name="StartGameButton" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("5_ileah")
text = "Start Game"

[node name="Tutorial" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ileah")
text = "       Tutorial      "

[connection signal="pressed" from="Control/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
